--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -22,13 +22,13 @@
             </Grid.RowDefinitions>
             
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="3*"></ColumnDefinition>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             
             <!-- Row 1 -->
-            <TextBox Grid.Row="0" Grid.Column="0" x:Name="TextBoxTaskName" Margin="15" Padding="5" Watermark="Wpisz swoje imię"/>
+            <TextBox Grid.Row="0" Grid.Column="0" x:Name="TextBoxTaskName" Margin="15" Padding="5" Watermark="Wpisz nazwę zadania"/>
             
             <ComboBox Grid.Row="0" Grid.Column="1" x:Name="ComboBoxTaskType" Margin="15" Padding="5" MinWidth="150">
                 <ComboBoxItem Content="Praca" />
@@ -40,40 +40,16 @@
             </ComboBox>
             
             <Button Grid.Row="0" Grid.Column="2" x:Name="ButtonTaskSend" Margin="15" Padding="5"
-                    Content="Dodaj zadanie" Background="ForestGreen" />
+                    Click="OnButtonClick" Content="Dodaj zadanie" Background="ForestGreen" />
             
             
             <!-- Lista Zadań -->
-            <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Background="Moccasin">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                </Grid.RowDefinitions>
-            
+            <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" x:Name="TaskGrid" Background="Moccasin">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="2*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-            
-                <!-- Row 1 -->
-                <TextBlock Grid.Row="0" Grid.Column="0" x:Name="TextBox2TaskName" Margin="15" Padding="5"/>
-            
-                <ComboBox Grid.Row="0" Grid.Column="1" x:Name="ComboBox2ChangeTaskType" Margin="15" Padding="5" MinWidth="120">
-                    <ComboBoxItem Content="Praca" />
-                    <ComboBoxItem Content="Zakupy" />
-                    <ComboBoxItem Content="Relaks" />
-                    <ComboBoxItem Content="Rodzina" />
-                    <ComboBoxItem Content="Znajomi" />
-                    <ComboBoxItem Content="Inne" />
-                </ComboBox>
-                
-                <CheckBox Grid.Row="0" Grid.Column="2" x:Name="CheckBoxIsFinished" Margin="15" Padding="15, 5"
-                          HorizontalAlignment="Left" Content="Zakończone" />
-            
-                <Button Grid.Row="0" Grid.Column="2" x:Name="Button2TaskDelete" Margin="15" Padding="15, 5"
-                        HorizontalAlignment="Right" Content="Usuń zadanie" Background="Firebrick" />
             </Grid>
             
             
