--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -30,14 +30,18 @@
             <!-- Row 1 -->
             <TextBox Grid.Row="0" Grid.Column="0" x:Name="TextBoxTaskName" Margin="15" Padding="5" Watermark="Wpisz nazwę zadania"/>
             
-            <ComboBox Grid.Row="0" Grid.Column="1" x:Name="ComboBoxTaskType" Margin="15" Padding="5" MinWidth="150">
+            <ComboBox Grid.Row="0" Grid.Column="1" x:Name="ComboBoxTaskType" Margin="15" Padding="5" HorizontalAlignment="Left" MinWidth="150">
                 <ComboBoxItem Content="Praca" />
+                <ComboBoxItem Content="Hobby" />
                 <ComboBoxItem Content="Zakupy" />
                 <ComboBoxItem Content="Relaks" />
+                <ComboBoxItem Content="Rozrywka" />
                 <ComboBoxItem Content="Rodzina" />
                 <ComboBoxItem Content="Znajomi" />
                 <ComboBoxItem Content="Inne" />
             </ComboBox>
+            
+            <TextBlock Grid.Row="0" Grid.Column="1" x:Name="EmptyWarningTextBlock" Margin="15" Padding="5" HorizontalAlignment="Right" Text=""/>
             
             <Button Grid.Row="0" Grid.Column="2" x:Name="ButtonTaskSend" Margin="15" Padding="5"
                     Click="OnButtonClick" Content="Dodaj zadanie" Background="ForestGreen" />
